[package]
name = "p2p_solana_handshake"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "p2p_solana_handshake"
path = "src/main.rs"

[lib]
name = "p2p_solana_handshake"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
solana-sdk = { version = "1.18.0" }
borsh = { version = "0.9" }
thiserror = { version = "1.0" }
anyhow = { version = "1.0" }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
tracing-bunyan-formatter = { version = "0.3" }
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
async-trait = "0.1"
rand = "0.8"

[dev-dependencies]
tokio-test = { version = "0.4" }
wiremock = { version = "0.6" }
mockall = { version = "0.12" }
tempfile = {  version = "3.8" }
rstest = {  version = "0.18" }
serde_json = {  version = "1.0" }
